--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
+Before trying to access the admin panel make sure to run the command:
+python manage.py runserver 80
 General account to log into the admin panel
 Username: admin
 Password: admin123
